# AloneAsif-Spec-Driven-Development-Hackathons

./: .gitignore  CLAUDE.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Hackathon_1/: .gitignore  package-lock.json  pyproject.toml  requirements.txt
Hackathon_1/backend/: database.py  engine.py  ingest.py  main.py  pyproject.toml  requirments.txt
Hackathon_1/docusaurus-book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
Hackathon_2/phase_1/: CLAUDE.md
Hackathon_2/phase_1/todo-cli/: README.md  pyproject.toml
Hackathon_2/phase_1/todo-cli/src/cli/: menu.py
Hackathon_2/phase_1/todo-cli/src/models/: todo.py
Hackathon_2/phase_1/todo-cli/src/services/: todo_service.py
Hackathon_2/phase_1/todo-cli/tests/: __init__.py
Hackathon_2/phase_1/todo-cli/tests/integration/: test_cli_flow.py
Hackathon_2/phase_1/todo-cli/tests/unit/: test_todo_model.py  test_todo_service.py
backend/: .gitignore  README.md  comprehensive_test.py  config.py  db.py  init_db.py  main.py  requirements.txt  simple_validation_test.py  task_management.db  test_api.py  test_error_handling.py  test_task_endpoints.py  test_tasks.py
backend/dependencies/: auth.py  exceptions.py
backend/models/: task_models.py
backend/routes/: auth.py  tasks.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  Navbar.tsx  ProtectedRoute.tsx  TaskCard.tsx  TaskForm.tsx  (+1 more)
(+207 files in other folders)
