[project]
name = "todo-cli"
version = "0.1.0"
description = "In-memory todo management CLI application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
todo = "src.cli.menu:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
